Fixed spacing error

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -39,7 +39,7 @@ body {
     top: 0;
     flex-direction: row;
     justify-content: space-around;
-    padding: 0 5vw;
+    padding: 0 5rem;
     align-items: center;
     height: 10vh;
     width: 100vw;
@@ -279,6 +279,7 @@ ul {
     align-items: center;
     width: 100%;
     height: 90%;
+    overflow-y: scroll;
 }
 
 #contactMe {
